--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "firebase": "^8.2.4",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
+    "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-native": "0.63.2"
   },
